fix: pyngrok module not found

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -147,6 +147,7 @@
         "\n",
         "    s = getoutput(\"nvidia-smi\")\n",
         "    with capture.capture_output() as cap:\n",
+        "        !pip install pyngrok\n",
         "        if not \"T4\" in s:\n",
         "            !pip uninstall -y xformers\n",
         "            !pip install -q xformers==0.0.18 triton\n",
@@ -961,13 +962,14 @@
         "\n",
         "# @markdown ### Arguments\n",
         "use_gradio_auth = False # @param {type: 'boolean'}\n",
+        "accelerator = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-split-attention']\n",
         "medvram = False # @param {type: 'boolean'}\n",
         "load_in_vram = True # @param {type: 'boolean'}\n",
         "silent_launch = True # @param {type: 'boolean'}\n",
         "auto_model = False # @param {type: 'boolean'}\n",
         "auto_vae = True # @param {type: 'boolean'}\n",
         "no_half_vae = True # @param {type: 'boolean'}\n",
-        "additional_args = \"--xformers\" #@param {type: 'string'}\n",
+        "additional_args = \"--no-download-sd-model --gradio-queue\" #@param {type: 'string'}\n",
         "\n",
         "config_file = os.path.join(repo_dir, \"config.json\")\n",
         "ui_config_file = os.path.join(repo_dir, \"ui-config.json\")\n",
@@ -1108,6 +1110,7 @@
         "config = {\n",
         "    \"enable-insecure-extension-access\": True,\n",
         "    \"disable-safe-unpickle\": True,\n",
+        "    f\"{accelerator}\": True,\n",
         "    f\"{alt_tunnel}\": True if not alt_tunnel == \"none\" and not ngrok_token else False,\n",
         "    \"medvram\": medvram,\n",
         "    \"share\": True if not ngrok_token else False,\n",
@@ -1118,7 +1121,6 @@
         "    \"disable-console-progressbars\": silent_launch,\n",
         "    \"ngrok\": ngrok_token if ngrok_token else None,\n",
         "    \"ngrok-region\": ngrok_region if ngrok_token else None,\n",
-        "    \"gradio-queue\": True,\n",
         "    \"opt-sub-quad-attention\": True,\n",
         "    \"opt-channelslast\": True,\n",
         "    \"theme\": \"dark\",\n",
