fix: undefined dir fixed

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -86,7 +86,17 @@
         "        %store {dir}\n",
         "    del cap\n",
         "\n",
-        "for dir in [patches_dir, deps_dir, fused_dir]:\n",
+        "for dir in [patches_dir, \n",
+        "            deps_dir,\n",
+        "            fused_dir,\n",
+        "            outputs_dir,\n",
+        "            models_dir,\n",
+        "            vaes_dir,\n",
+        "            hypernetworks_dir,\n",
+        "            embeddings_dir,\n",
+        "            extensions_dir,\n",
+        "            lora_dir,\n",
+        "            control_dir]:\n",
         "    os.makedirs(dir, exist_ok=True)\n",
         "    \n",
         "# url or path\n",
