fix: set true hyperlink for controlnet

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -496,7 +496,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title ## **ControlNet v1.1** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#controlnet)</small></small>\n",
+        "# @title ## **ControlNet v1.1** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#controlnet-v11)</small></small>\n",
         "import os\n",
         "import time\n",
         "import re\n",
