--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -397,7 +397,6 @@
         "# @markdown ### Available SD v2.x 768v Model\n",
         "replicant_v1 = False  # @param {type: 'boolean'}\n",
         "replicant_v2 = False  # @param {type: 'boolean'}\n",
-        "illuminati_diffusion_v1_1 = False  # @param {type: 'boolean'}\n",
         "waifu_diffusion_v1_5_e2_aesthetic = False  # @param {type: 'boolean'}\n",
         "\n",
         "# @markdown ### Available VAE\n",
@@ -416,7 +415,6 @@
         "    (\"stable_diffusion_v1_5\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/stable_diffusion_1_5-pruned.safetensors\"),\n",
         "    (\"replicant_v1\", \"https://huggingface.co/gsdf/Replicant-V1.0/resolve/main/Replicant-V1.0_fp16.safetensors\"),\n",
         "    (\"replicant_v2\", \"https://huggingface.co/gsdf/Replicant-V2.0/resolve/main/Replicant-V2.0_fp16.safetensors\"),\n",
-        "    (\"illuminati_diffusion_v1_1\", \"https://huggingface.co/Atandra/Illuminati/resolve/main/illuminatiDiffusionV1_v11.safetensors\"),\n",
         "    (\"waifu_diffusion_v1_5_e2_aesthetic\", \"https://huggingface.co/waifu-diffusion/wd-1-5-beta2/resolve/main/checkpoints/wd-1-5-beta2-aesthetic-fp16.safetensors\"),\n",
         "]\n",
         "\n",
@@ -983,12 +981,11 @@
         "# @markdown ### Arguments\n",
         "use_gradio_auth = False # @param {type: 'boolean'}\n",
         "accelerator = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-split-attention']\n",
-        "medvram = False # @param {type: 'boolean'}\n",
         "load_in_vram = True # @param {type: 'boolean'}\n",
-        "silent_launch = True # @param {type: 'boolean'}\n",
-        "auto_model = False # @param {type: 'boolean'}\n",
-        "auto_vae = True # @param {type: 'boolean'}\n",
-        "no_half_vae = True # @param {type: 'boolean'}\n",
+        "quiet_mode = True # @param {type: 'boolean'}\n",
+        "auto_select_model = False # @param {type: 'boolean'}\n",
+        "auto_select_VAE = True # @param {type: 'boolean'}\n",
+        "no_half_VAE = True # @param {type: 'boolean'}\n",
         "additional_args = \"--no-download-sd-model --gradio-queue\" #@param {type: 'string'}\n",
         "\n",
         "config_file = os.path.join(repo_dir, \"config.json\")\n",
@@ -1062,14 +1059,14 @@
         "valid_lora_dir = is_dir_exist(os.path.join(fused_dir, \"LoRA\"), lora_dir)\n",
         "valid_hypernetwork_dir = is_dir_exist(os.path.join(fused_dir, \"hypernetwork\"), hypernetworks_dir)\n",
         "\n",
-        "if auto_model:\n",
+        "if auto_select_model:\n",
         "    model_path = \"dummy.ckpt\"\n",
         "    models_list = os.listdir(valid_ckpt_dir)\n",
         "    model_files = [f for f in models_list if f.endswith(('.ckpt','.safetensors'))]\n",
         "    if model_files:\n",
         "        model_path = random.choice(model_files)\n",
         "\n",
-        "if auto_vae:\n",
+        "if auto_select_VAE:\n",
         "    vae_path = \"dummy.pt\"\n",
         "    vaes_list = os.listdir(valid_vae_dir)\n",
         "    vae_files = [f for f in vaes_list if f.endswith('.vae.pt')]\n",
@@ -1083,9 +1080,9 @@
         "config[\"eta_noise_seed_delta\"] = 0\n",
         "config[\"show_progress_every_n_steps\"] = 10\n",
         "config[\"show_progressbar\"] = True\n",
-        "if auto_model and os.path.exists(os.path.join(valid_ckpt_dir, model_path)):\n",
+        "if auto_select_model and os.path.exists(os.path.join(valid_ckpt_dir, model_path)):\n",
         "    config[\"sd_model_checkpoint\"] = model_path\n",
-        "if auto_vae and os.path.exists(os.path.join(valid_vae_dir, vae_path)):\n",
+        "if auto_select_VAE and os.path.exists(os.path.join(valid_vae_dir, vae_path)):\n",
         "    config[\"sd_vae\"] = vae_path\n",
         "config[\"quicksettings\"] = \"sd_model_checkpoint, sd_vae, CLIP_stop_at_last_layers, use_old_karras_scheduler_sigmas, always_discard_next_to_last_sigma\"\n",
         "write_config(config_file, config)\n",
@@ -1130,13 +1127,12 @@
         "    \"disable-safe-unpickle\": True,\n",
         "    f\"{accelerator}\": True,\n",
         "    f\"{alt_tunnel}\": True if not alt_tunnel == \"none\" and not ngrok_token else False,\n",
-        "    \"medvram\": medvram,\n",
         "    \"share\": True if not ngrok_token else False,\n",
         "    \"gradio-auth\": f\"{user}:{password}\" if use_gradio_auth else None,\n",
-        "    \"no-half-vae\": no_half_vae,\n",
+        "    \"no-half-vae\": no_half_VAE,\n",
         "    \"lowram\": load_in_vram,\n",
-        "    \"no-hashing\": silent_launch,\n",
-        "    \"disable-console-progressbars\": silent_launch,\n",
+        "    \"no-hashing\": quiet_mode,\n",
+        "    \"disable-console-progressbars\": quiet_mode,\n",
         "    \"ngrok\": ngrok_token if ngrok_token else None,\n",
         "    \"ngrok-region\": ngrok_region if ngrok_token else None,\n",
         "    \"opt-sub-quad-attention\": True,\n",
