--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -14,12 +14,26 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "![](https://visitor-badge.glitch.me/badge?page_id=linaqruf.cag-webui) [![](https://dcbadge.vercel.app/api/shield/850007095775723532?style=flat)](https://lookup.guru/850007095775723532) [![ko-fi](https://img.shields.io/badge/Support%20me%20on%20Ko--fi-F16061?logo=ko-fi&logoColor=white&style=flat)](https://ko-fi.com/linaqruf) <a href=\"https://saweria.co/linaqruf\"><img alt=\"Saweria\" src=\"https://img.shields.io/badge/Saweria-7B3F00?style=flat&logo=ko-fi&logoColor=white\"/></a> \n",
+        "![visitor][visitor-badge] \n",
+        "[![discord][discord-badge]][discord-lookup]\n",
+        "[![ko-fi][ko-fi-badge]][ko-fi-link]\n",
+        "[![saweria][saweria-badge]][saweria-link]\n",
         "\n",
-        "# [**Cagliostro Colab UI**](https://github.com/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui.ipynb)\n",
-        "All-in-One, Customizable and Flexible AUTOMATIC1111's Stable Diffusion Web UI for Google Colab. <br>\n",
+        "# [**Cagliostro Colab UI**][link-to-github]\n",
+        "All-in-One, Customizable and Flexible AUTOMATIC1111's Stable Diffusion Web UI for Google Colab.\n",
         "\n",
-        "[What's New?](https://github.com/Linaqruf/sd-notebook-collection/blob/main/README.md#whats-new) | `NEW!` [Pocketbook Guide](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#cagliostro-colab-ui-user-manual)\n",
+        "[What's New?][README] | `NEW!` [Pocketbook Guide][MANUAL]\n",
+        "\n",
+        "[visitor-badge]: https://visitor-badge.glitch.me/badge?page_id=linaqruf.cag-webui\n",
+        "[discord-badge]: https://dcbadge.vercel.app/api/shield/850007095775723532?style=flat\n",
+        "[discord-lookup]: https://lookup.guru/850007095775723532\n",
+        "[ko-fi-badge]: https://img.shields.io/badge/Support%20me%20on%20Ko--fi-F16061?logo=ko-fi&logoColor=white&style=flat\n",
+        "[ko-fi-link]: https://ko-fi.com/linaqruf\n",
+        "[saweria-badge]: https://img.shields.io/badge/Saweria-7B3F00?style=flat&logo=ko-fi&logoColor=white\n",
+        "[saweria-link]: https://saweria.co/linaqruf\n",
+        "[link-to-github]: https://github.com/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui.ipynb\n",
+        "[README]: https://github.com/Linaqruf/sd-notebook-collection/blob/main/README.md#whats-new\n",
+        "[MANUAL]: https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#cagliostro-colab-ui-user-manual\n",
         "\n"
       ],
       "metadata": {
