feat: removed automatic and only use anapnoe for now

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -20,7 +20,7 @@
         "[![saweria][saweria-badge]][saweria-link]\n",
         "\n",
         "# [**Cagliostro Colab UI**][link-to-github]\n",
-        "All-in-One, Customizable and Flexible AUTOMATIC1111's Stable Diffusion Web UI for Google Colab.\n",
+        "All-in-One, Customizable and Flexible **Anapnoe UI** for Google Colab.\n",
         "\n",
         "[What's New?][README] | `NEW!` [Pocketbook Guide][MANUAL]\n",
         "\n",
@@ -41,9 +41,23 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "> **WARNING**: Due to new [Google Colab ToS][colab_tos], for now Cagliostro Colab UI only provides **[Anapnoe UI][anapnoe_url]** only.\n",
+        "\n",
+        "[anapnoe_url]: https://github.com/anapnoe\n",
+        "[colab_tos]: https://research.google.com/colaboratory/faq.html#limitations-and-restrictions\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "DtwZX4eG-YHw"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# @title ## **Install Stable Diffusion Web UI** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#install-stable-diffusion-web-ui)</small></small>\n",
+        "# @title ## **Install Anapnoe UI** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#install-stable-diffusion-web-ui)</small></small>\n",
         "import os\n",
         "import shutil\n",
         "import zipfile\n",
@@ -62,7 +76,7 @@
         "\n",
         "# root directory\n",
         "root_dir = \"/content\"\n",
-        "repo_dir = os.path.join(root_dir, \"stable-diffusion-webui\")\n",
+        "repo_dir = os.path.join(root_dir, \"cagliostro-colab-ui\")\n",
         "tmp_dir = os.path.join(root_dir, \"tmp\")\n",
         "patches_dir = os.path.join(root_dir, \"patches\")\n",
         "deps_dir = os.path.join(root_dir, \"deps\")\n",
@@ -94,8 +108,6 @@
         "output_drive_folder = \"cagliostro-colab-ui/outputs\" #@param {type:'string'}\n",
         "\n",
         "# @markdown ### Web UI Config\n",
-        "# @markdown > `anapnoe-webui` is a fork that provides better UI/UX\n",
-        "use_anapnoe_ui = True  # @param {type:'boolean'}\n",
         "update_webui = True  # @param {type:'boolean'}\n",
         "update_extensions = True  # @param {type:'boolean'}\n",
         "commit_hash = \"\"  # @param {type:'string'}\n",
@@ -106,7 +118,7 @@
         "# model\n",
         "os.chdir(root_dir)\n",
         "\n",
-        "repo_type = \"webui\" if not use_anapnoe_ui else \"anapnoe-webui\"\n",
+        "repo_type = \"cagliostro-colab-ui\"\n",
         "package_url = [\n",
         "    f\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/{repo_type}.tar.lz4\",\n",
         "    f\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/{repo_type}-deps.tar.lz4\",\n",
@@ -181,8 +193,6 @@
         "\n",
         "def install_webui(overwrite):\n",
         "    desc = \"\u001b[1;32mUnpacking Webui\"\n",
-        "    if use_anapnoe_ui:\n",
-        "        print(\"\u001b[1;32mUsing new UI/UX from @Anapnoe...\")\n",
         "    pre_download(desc, overwrite)\n",
         "\n",
         "    for dir in [fused_dir, models_dir, vaes_dir, hypernetworks_dir, embeddings_dir, extensions_dir, lora_dir, control_dir, esrgan_dir]:\n",
@@ -199,18 +209,11 @@
         "    output = cap.stdout.strip()\n",
         "    os.chdir(root_dir)\n",
         "    try:\n",
-        "        if use_anapnoe_ui:\n",
-        "          if \"https://github.com/anapnoe/stable-diffusion-webui-ux\" in output:\n",
-        "              print(\"\u001b[1;32mAlready installed, skipping...\")\n",
-        "          else:\n",
-        "            print(\"\u001b[1;32mReinstall Web UI, use Anapnoe version...\")\n",
-        "            install_webui(overwrite=True)\n",
+        "        if \"https://github.com/Linaqruf/anapnoe-ui\" in output:\n",
+        "            print(\"\u001b[1;32mAlready installed, skipping...\")\n",
         "        else:\n",
-        "          if \"https://github.com/AUTOMATIC1111/stable-diffusion-webui\" in output:\n",
-        "              print(\"\u001b[1;32mAlready installed, skipping...\")\n",
-        "          else:\n",
-        "            print(\"\u001b[1;32mReinstall Web UI, use Automatic1111 version...\")\n",
-        "            install_webui(overwrite=True)\n",
+        "          print(\"\u001b[1;32mReinstall Web UI, use Anapnoe version...\")\n",
+        "          install_webui(overwrite=True)\n",
         "    except Exception as e:\n",
         "        print(f\"\u001b[1;32mAn error occurred: {e}\")\n",
         "            \n",
@@ -286,14 +289,7 @@
         "    config[\"outdir_img2img_grids\"] = os.path.join(drive_dir, \"img2img-grids\")\n",
         "    write_config(config_file, config)\n",
         "\n",
-        "    if use_anapnoe_ui:\n",
-        "        skipped_extensions = [\"stable-diffusion-webui-images-browser\"]\n",
-        "        for filename in os.listdir(extensions_dir):\n",
-        "            if \"stable-diffusion-webui\" in filename:\n",
-        "                config = read_config(config_file)\n",
-        "                if not \"stable-diffusion-webui\" in config[\"disabled_extensions\"]:\n",
-        "                    config[\"disabled_extensions\"].append(\"stable-diffusion-webui\")\n",
-        "                write_config(config_file, config)\n",
+        "    skipped_extensions = [\"sd-webui-images-browser\"]\n",
         "\n",
         "    end_time = time.time()\n",
         "    elapsed_time = int(end_time - start_time)\n",
@@ -1022,7 +1018,7 @@
         "        print(f\"\u001b[1;32mAn error occurred: {e}\")\n",
         "\n",
         "    output = cap.stdout.strip()\n",
-        "    if \"https://github.com/anapnoe/stable-diffusion-webui-ux\" in output:\n",
+        "    if \"https://github.com/Linaqruf/anapnoe-ui\" in output:\n",
         "        open_theme(filename)\n",
         "    else:\n",
         "        print(\"You're not using Anapnoe UI/UX, skipping theme selecting...\\n\")    \n",
