feat: added gradio 3.23 support

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -107,18 +107,21 @@
         "output_to_drive = False  # @param {type:'boolean'}\n",
         "output_drive_folder = \"cagliostro-colab-ui/outputs\" #@param {type:'string'}\n",
         "\n",
-        "# @markdown ### Web UI Config\n",
+        "# @markdown ### Repo Config\n",
         "update_webui = True  # @param {type:'boolean'}\n",
         "update_extensions = True  # @param {type:'boolean'}\n",
         "commit_hash = \"\"  # @param {type:'string'}\n",
         "# @markdown > It's not recommended to set this `True` if you have **Colab Pro** subscription.\n",
         "colab_optimizations = False  # @param {type:'boolean'}\n",
         "\n",
+        "# @markdown ### Experimental\n",
+        "gradio_3_23_0 = True  # @param {type:'boolean'}\n",
+        "\n",
         "\n",
         "# model\n",
         "os.chdir(root_dir)\n",
         "\n",
-        "repo_type = \"cagliostro-colab-ui\"\n",
+        "repo_type = \"cagliostro-colab-ui\" if not gradio_3_23_0 else \"cagliostro-colab-ui-dev\"\n",
         "package_url = [\n",
         "    f\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/{repo_type}.tar.lz4\",\n",
         "    f\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/{repo_type}-deps.tar.lz4\",\n",
@@ -289,8 +292,11 @@
         "    config[\"outdir_img2img_grids\"] = os.path.join(drive_dir, \"img2img-grids\")\n",
         "    write_config(config_file, config)\n",
         "\n",
-        "    skipped_extensions = [\"sd-webui-images-browser\"]\n",
-        "\n",
+        "    skipped_extensions = []\n",
+        "    \n",
+        "    if gradio_3_23_0:\n",
+        "        skipped_extensions = [\"sd-webui-images-browser\"]\n",
+        "    \n",
         "    end_time = time.time()\n",
         "    elapsed_time = int(end_time - start_time)\n",
         "\n",
