fix: make dirs output

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -292,10 +292,19 @@
         "    config[\"outdir_img2img_grids\"] = os.path.join(drive_dir, \"img2img-grids\")\n",
         "    write_config(config_file, config)\n",
         "\n",
-        "    skipped_extensions = []\n",
+        "    for dir in [\n",
+        "        \"txt2img-images\",\n",
+        "        \"img2img-images\",\n",
+        "        \"extras-images\",\n",
+        "        \"txt2img-grids\",\n",
+        "        \"img2img-grids\",\n",
+        "    ]:\n",
+        "        os.makedirs(os.path.join(drive_dir, dir))\n",
+        "\n",
+        "    skipped_extensions = [\"sd-webui-images-browser\"]\n",
         "    \n",
         "    if gradio_3_23_0:\n",
-        "        skipped_extensions = [\"sd-webui-images-browser\"]\n",
+        "        skipped_extensions = []\n",
         "    \n",
         "    end_time = time.time()\n",
         "    elapsed_time = int(end_time - start_time)\n",
