fix: forgot to add exist_ok

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -299,7 +299,7 @@
         "        \"txt2img-grids\",\n",
         "        \"img2img-grids\",\n",
         "    ]:\n",
-        "        os.makedirs(os.path.join(drive_dir, dir))\n",
+        "        os.makedirs(os.path.join(drive_dir, dir), exist_ok=True)\n",
         "\n",
         "    skipped_extensions = [\"sd-webui-images-browser\"]\n",
         "    \n",
