fix: removed alt_tunnels

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -43,12 +43,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> **WARNING**: Due to new [Google Colab ToS][colab_tos], for now Cagliostro Colab UI only provides **[Anapnoe UI][anapnoe_url]** only.\n",
+        "> <font color=\"#CC3E3E\">**WARNING**:</font> \n",
+        "1. Due to new [Google Colab ToS][colab_tos] and [Official Statement][official_statement], **Cagliostro Colab UI** only provides access to [Anapnoe UI][anapnoe_url] currently.\n",
+        "2. I am not responsible for any account suspension due to ToS violation.\n",
+        "4. There is [Cagliostro Colab UI Pro][cagliostro_colab_ui_pro] version, that has old features before Colab gatekeeping free tier user.  However I do not have a Colab Pro subscription, I am unlikely to maintain it.\n",
         "\n",
         "[anapnoe_url]: https://github.com/anapnoe\n",
         "[colab_tos]: https://research.google.com/colaboratory/faq.html#limitations-and-restrictions\n",
-        "\n",
-        "\n"
+        "[official_statement]: https://twitter.com/thechrisperry/status/1649189902079381505\n",
+        "[cagliostro_colab_ui_pro]: https://colab.research.google.com/github/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui-pro.ipynb\n"
       ],
       "metadata": {
         "id": "DtwZX4eG-YHw"
@@ -962,8 +965,6 @@
         "%store -r \n",
         "\n",
         "# @markdown ### Alternative Tunnel\n",
-        "# @markdown > Recommended Tunnels: `ngrok` > `cloudflared` > `remotemoe` > `localhostrun` > `googleusercontent` > `gradio`\n",
-        "tunnel = \"multiple\" # @param ['none', 'multiple','cloudflared', 'localhostrun', 'remotemoe', \"googleusercontent\"]\n",
         "# @markdown > Get <b>your</b> token for ngrok [here](https://dashboard.ngrok.com/get-started/your-authtoken) \n",
         "ngrok_token = \"\" # @param {type: 'string'}\n",
         "ngrok_region = \"ap\" # @param [\"us\", \"eu\", \"au\", \"ap\", \"sa\", \"jp\", \"in\"]\n",
@@ -1117,7 +1118,6 @@
         "    \"enable-insecure-extension-access\": True,\n",
         "    \"disable-safe-unpickle\": True,\n",
         "    f\"{accelerator}\": True,\n",
-        "    f\"{tunnel}\": True if not tunnel == \"none\" and not ngrok_token else False,\n",
         "    \"share\": True if not ngrok_token else False,\n",
         "    \"gradio-auth\": f\"{user}:{password}\" if use_gradio_auth else None,\n",
         "    \"no-half-vae\": no_half_VAE,\n",
