--- a/cagliostro-colab-ui-pro.ipynb
+++ b/cagliostro-colab-ui-pro.ipynb
@@ -19,7 +19,7 @@
         "[![ko-fi][ko-fi-badge]][ko-fi-link]\n",
         "[![saweria][saweria-badge]][saweria-link]\n",
         "\n",
-        "# [**Cagliostro Colab UI**][link-to-github]\n",
+        "# [**Cagliostro Colab UI Pro**][link-to-github]\n",
         "All-in-One, Customizable and Flexible AUTOMATIC1111's Stable Diffusion Web UI for Google Colab.\n",
         "\n",
         "[What's New?][README] | `NEW!` [Pocketbook Guide][MANUAL]\n",
@@ -31,7 +31,7 @@
         "[ko-fi-link]: https://ko-fi.com/linaqruf\n",
         "[saweria-badge]: https://img.shields.io/badge/Saweria-7B3F00?style=flat&logo=ko-fi&logoColor=white\n",
         "[saweria-link]: https://saweria.co/linaqruf\n",
-        "[link-to-github]: https://github.com/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui.ipynb\n",
+        "[link-to-github]: https://github.com/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui-pro.ipynb\n",
         "[README]: https://github.com/Linaqruf/sd-notebook-collection/blob/main/README.md#whats-new\n",
         "[MANUAL]: https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#cagliostro-colab-ui-user-manual\n",
         "\n"
