--- a/cagliostro-colab-ui-pro.ipynb
+++ b/cagliostro-colab-ui-pro.ipynb
@@ -174,6 +174,7 @@
         "    with capture.capture_output() as cap:\n",
         "        !apt -y update -qq\n",
         "        !apt install libunwind8-dev -yqq\n",
+        "        !apt install unionfs-fuse -qq\n",
         "        for url in [ubuntu_deps_url, ram_patch]:\n",
         "            ubuntu_deps(url, deps_dir)\n",
         "        os.environ[\"LD_PRELOAD\"] = \"libtcmalloc.so\"\n",
