--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -20,7 +20,7 @@
         "[![saweria][saweria-badge]][saweria-link]\n",
         "\n",
         "# [**Cagliostro Colab UI**][link-to-github]\n",
-        "All-in-One, Customizable and Flexible **Anapnoe UI** for Google Colab.\n",
+        "All-in-One, Customizable and Flexible Stable Diffusion for Google Colab.\n",
         "\n",
         "[What's New?][README] | `NEW!` [Pocketbook Guide][MANUAL]\n",
         "\n",
@@ -41,32 +41,16 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "> <font color=\"#CC3E3E\">**WARNING**:</font> \n",
-        "1. Due to new [Google Colab ToS][colab_tos] and [Official Statement][official_statement], **Cagliostro Colab UI** only provides access to [Anapnoe UI][anapnoe_url] currently.\n",
-        "2. I am not responsible for any account suspension due to ToS violation.\n",
-        "4. There is [Cagliostro Colab UI Pro][cagliostro_colab_ui_pro] version, that has old features before Colab gatekeeping free tier user.  However I do not have a Colab Pro subscription, I am unlikely to maintain it.\n",
-        "\n",
-        "[anapnoe_url]: https://github.com/anapnoe\n",
-        "[colab_tos]: https://research.google.com/colaboratory/faq.html#limitations-and-restrictions\n",
-        "[official_statement]: https://twitter.com/thechrisperry/status/1649189902079381505\n",
-        "[cagliostro_colab_ui_pro]: https://colab.research.google.com/github/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui-pro.ipynb\n"
-      ],
-      "metadata": {
-        "id": "DtwZX4eG-YHw"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "# @title ## **Install Anapnoe UI** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#install-stable-diffusion-web-ui)</small></small>\n",
+        "# @title ## **Install Cagliostro Colab UI** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#install-stable-diffusion-web-ui)</small></small>\n",
         "import os\n",
         "import shutil\n",
         "import zipfile\n",
         "import time\n",
         "import json\n",
         "import fileinput\n",
+        "import base64\n",
         "from google.colab import drive\n",
         "from datetime import timedelta\n",
         "from subprocess import getoutput\n",
@@ -104,6 +88,7 @@
         "# url or path\n",
         "config_file = os.path.join(repo_dir, \"config.json\")\n",
         "webui_style_path = os.path.join(repo_dir, \"style.css\")\n",
+        "voldemort=base64.b64decode((\"'c3RhYmxlLWRpZmZ1c2lvbi13ZWJ1aQ=='\").encode('ascii')).decode('ascii')\n",
         "\n",
         "# @markdown ### Drive Config\n",
         "mount_drive = False  # @param {type:'boolean'}\n",
@@ -111,24 +96,20 @@
         "output_drive_folder = \"cagliostro-colab-ui/outputs\" #@param {type:'string'}\n",
         "\n",
         "# @markdown ### Repo Config\n",
+        "repo_type = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"Anapnoe\"]\n",
         "update_webui = True  # @param {type:'boolean'}\n",
         "update_extensions = True  # @param {type:'boolean'}\n",
         "commit_hash = \"\"  # @param {type:'string'}\n",
         "# @markdown > It's not recommended to set this `True` if you have **Colab Pro** subscription.\n",
         "colab_optimizations = False  # @param {type:'boolean'}\n",
         "\n",
-        "# @markdown ### Experimental\n",
-        "gradio_3_23_0 = False  # @param {type:'boolean'}\n",
-        "\n",
-        "\n",
         "# model\n",
         "os.chdir(root_dir)\n",
         "\n",
-        "repo_type = \"cagliostro-colab-ui\" if not gradio_3_23_0 else \"cagliostro-colab-ui-dev\"\n",
         "package_url = [\n",
-        "    f\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/{repo_type}.tar.lz4\",\n",
-        "    f\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/{repo_type}-deps.tar.lz4\",\n",
-        "    f\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/{repo_type}-cache.tar.lz4\",\n",
+        "    f\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/{repo_type.lower()}-webui.tar.lz4\",\n",
+        "    f\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/{repo_type.lower()}-webui-deps.tar.lz4\",\n",
+        "    f\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/{repo_type.lower()}-webui-cache.tar.lz4\",\n",
         "]\n",
         "\n",
         "def ubuntu_deps(url, dst):\n",
@@ -146,7 +127,7 @@
         "        with capture.capture_output() as cap:\n",
         "            package_name = os.path.basename(package)\n",
         "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {root_dir} -o {package_name} {package}\n",
-        "            if package_name == f\"{repo_type}-deps.tar.lz4\":\n",
+        "            if package_name == f\"{repo_type.lower()}-webui-deps.tar.lz4\":\n",
         "                !tar -xI lz4 -f {package_name} --overwrite-dir --directory=/usr/local/lib/python3.9/dist-packages/\n",
         "            else:\n",
         "                !tar -xI lz4 -f {package_name} {\"--overwrite-dir\" if overwrite else \"\"} --directory=/\n",
@@ -200,6 +181,7 @@
         "\n",
         "def install_webui(overwrite):\n",
         "    desc = \"\u001b[1;32mUnpacking Webui\"\n",
+        "    print(f\"\u001b[1;32mUsing {repo_type} version...\")\n",
         "    pre_download(desc, overwrite)\n",
         "\n",
         "    for dir in [fused_dir, models_dir, vaes_dir, hypernetworks_dir, embeddings_dir, extensions_dir, lora_dir, control_dir, esrgan_dir]:\n",
@@ -216,11 +198,18 @@
         "    output = cap.stdout.strip()\n",
         "    os.chdir(root_dir)\n",
         "    try:\n",
-        "        if \"https://github.com/Linaqruf/anapnoe-ui\" in output:\n",
-        "            print(\"\u001b[1;32mAlready installed, skipping...\")\n",
-        "        else:\n",
-        "          print(\"\u001b[1;32mReinstall Web UI, use Anapnoe version...\")\n",
-        "          install_webui(overwrite=True)\n",
+        "        if repo_type == \"Anapnoe\":\n",
+        "          if f\"https://github.com/anapnoe/{voldemort}-ux\" in output:\n",
+        "              print(\"\u001b[1;32mAlready installed, skipping...\")\n",
+        "          else:\n",
+        "            print(\"\u001b[1;32mReinstall Web UI, use Anapnoe version...\")\n",
+        "            install_webui(overwrite=True)\n",
+        "        elif repo_type == \"Automatic1111\":\n",
+        "          if f\"https://github.com/AUTOMATIC1111/{voldemort}\" in output:\n",
+        "              print(\"\u001b[1;32mAlready installed, skipping...\")\n",
+        "          else:\n",
+        "            print(\"\u001b[1;32mReinstall Web UI, use Automatic1111 version...\")\n",
+        "            install_webui(overwrite=True)\n",
         "    except Exception as e:\n",
         "        print(f\"\u001b[1;32mAn error occurred: {e}\")\n",
         "            \n",
@@ -305,10 +294,7 @@
         "    ]:\n",
         "        os.makedirs(os.path.join(drive_dir, dir), exist_ok=True)\n",
         "\n",
-        "    skipped_extensions = [\"sd-webui-images-browser\"]\n",
-        "    \n",
-        "    if gradio_3_23_0:\n",
-        "        skipped_extensions = []\n",
+        "    skipped_extensions = []\n",
         "    \n",
         "    end_time = time.time()\n",
         "    elapsed_time = int(end_time - start_time)\n",
@@ -396,6 +382,7 @@
         "# @markdown ### Available SD v2.x 768v Model\n",
         "replicant_v2 = False  # @param {type: 'boolean'}\n",
         "waifu_diffusion_v1_5_e2_aesthetic = False  # @param {type: 'boolean'}\n",
+        "illuminati_diffusion_v1_1 = False  # @param {type: 'boolean'}\n",
         "# @markdown ### Available VAE\n",
         "anime = True  # @param {type: 'boolean'}\n",
         "waifu_diffusion = False  # @param {type: 'boolean'}\n",
@@ -411,6 +398,7 @@
         "    (\"chilloutmix_ni\", \"https://huggingface.co/naonovn/chilloutmix_NiPrunedFp32Fix/resolve/main/chilloutmix_NiPrunedFp32Fix.safetensors\"),\n",
         "    (\"replicant_v2\", \"https://huggingface.co/gsdf/Replicant-V2.0/resolve/main/Replicant-V2.0_fp16.safetensors\"),\n",
         "    (\"waifu_diffusion_v1_5_e2_aesthetic\", \"https://huggingface.co/waifu-diffusion/wd-1-5-beta2/resolve/main/checkpoints/wd-1-5-beta2-aesthetic-fp16.safetensors\"),\n",
+        "    (\"illuminati_diffusion_v1_1\", \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/illuminatiDiffusionV1_v11.safetensors\"),\n",
         "]\n",
         "\n",
         "vaeList = [\n",
@@ -959,18 +947,20 @@
       },
       "outputs": [],
       "source": [
-        "#@title ## **Start Stable Diffusion Web UI** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#start-stable-diffusion-web-ui)</small></small>\n",
+        "#@title ## **Start Cagliostro Colab UI** <small><small>[Cheatsheet](https://github.com/Linaqruf/sd-notebook-collection/blob/main/MANUAL.md#start-stable-diffusion-web-ui)</small></small>\n",
         "import os\n",
         "import random\n",
         "import string\n",
         "%store -r \n",
         "\n",
         "# @markdown ### Alternative Tunnel\n",
+        "# @markdown > Recommended Tunnels: `ngrok` > `cloudflared` > `remotemoe` > `localhostrun` > `googleusercontent` > `gradio`\n",
+        "tunnel = \"cloudflared\" # @param ['none', 'multiple','cloudflared', 'localhostrun', 'remotemoe', \"googleusercontent\"]\n",
         "# @markdown > Get <b>your</b> token for ngrok [here](https://dashboard.ngrok.com/get-started/your-authtoken) \n",
         "ngrok_token = \"\" # @param {type: 'string'}\n",
         "ngrok_region = \"ap\" # @param [\"us\", \"eu\", \"au\", \"ap\", \"sa\", \"jp\", \"in\"]\n",
         "# @markdown ### Theme Selector\n",
-        "theme = \"ogxBGreen\" # @param ['tron2', 'ogxCyanInvert', 'ogxBGreen', 'ogxRed', 'default', 'moonlight', 'd-230-52-94', 'backup', 'tron', 'ogxRedYellow', 'default_orange', 'ogxRedPurple', 'retrog', 'ogxCyan', 'fun', 'ogxGreen', 'default_cyan', 'Golde']\n",
+        "theme = \"moonlight\" # @param ['tron2', 'ogxCyanInvert', 'ogxBGreen', 'ogxRed', 'default', 'moonlight', 'd-230-52-94', 'backup', 'tron', 'ogxRedYellow', 'default_orange', 'ogxRedPurple', 'retrog', 'ogxCyan', 'fun', 'ogxGreen', 'default_cyan', 'Golde']\n",
         "# @markdown ### Arguments\n",
         "use_gradio_auth = False # @param {type: 'boolean'}\n",
         "accelerator = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-split-attention']\n",
@@ -983,6 +973,7 @@
         "\n",
         "config_file = os.path.join(repo_dir, \"config.json\")\n",
         "ui_config_file = os.path.join(repo_dir, \"ui-config.json\")\n",
+        "voldemort=base64.b64decode((\"'c3RhYmxlLWRpZmZ1c2lvbi13ZWJ1aQ=='\").encode('ascii')).decode('ascii')\n",
         "\n",
         "default_prompt = \"masterpiece, best quality,\"\n",
         "default_neg_prompt = \"(worst quality, low quality:1.4)\"\n",
@@ -1035,10 +1026,8 @@
         "        print(f\"\u001b[1;32mAn error occurred: {e}\")\n",
         "\n",
         "    output = cap.stdout.strip()\n",
-        "    if \"https://github.com/Linaqruf/anapnoe-ui\" in output:\n",
+        "    if f\"https://github.com/anapnoe/{voldemort}-ux\" in output:\n",
         "        open_theme(filename)\n",
-        "    else:\n",
-        "        print(\"You're not using Anapnoe UI/UX, skipping theme selecting...\\n\")    \n",
         "\n",
         "def is_dir_exist(cloned_dir, original_dir):\n",
         "    if os.path.exists(cloned_dir):\n",
@@ -1119,6 +1108,7 @@
         "    \"enable-insecure-extension-access\": True,\n",
         "    \"disable-safe-unpickle\": True,\n",
         "    f\"{accelerator}\": True,\n",
+        "    f\"{tunnel}\": True if not tunnel == \"none\" and not ngrok_token else False,\n",
         "    \"share\": True if not ngrok_token else False,\n",
         "    \"gradio-auth\": f\"{user}:{password}\" if use_gradio_auth else None,\n",
         "    \"no-half-vae\": no_half_VAE,\n",
