feat: added DPM++ 2M v2

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -89,6 +89,8 @@
         "config_file = os.path.join(repo_dir, \"config.json\")\n",
         "webui_style_path = os.path.join(repo_dir, \"style.css\")\n",
         "voldemort=base64.b64decode((\"'c3RhYmxlLWRpZmZ1c2lvbi13ZWJ1aQ=='\").encode('ascii')).decode('ascii')\n",
+        "dpm_v2_url = \"https://gist.github.com/neggles/75eaacb3f49c209636be61fa96ca95ca/raw/f8c6382f0af65038149fd4258f8462697b698073/01-add-DPMPP-2M-V2.patch\"\n",
+        "sdv2_patches = \"https://raw.githubusercontent.com/ddPn08/automatic1111-colab/main/patches/stablediffusion-lowram.patch\"\n",
         "\n",
         "# @markdown ### Drive Config\n",
         "mount_drive = False  # @param {type:'boolean'}\n",
@@ -100,6 +102,7 @@
         "update_webui = True  # @param {type:'boolean'}\n",
         "update_extensions = True  # @param {type:'boolean'}\n",
         "commit_hash = \"\"  # @param {type:'string'}\n",
+        "dpm_v2_patch = True  # @param {type:'boolean'}\n",
         "# @markdown > It's not recommended to set this `True` if you have **Colab Pro** subscription.\n",
         "colab_optimizations = False  # @param {type:'boolean'}\n",
         "\n",
@@ -184,7 +187,7 @@
         "    print(f\"\u001b[1;32mUsing {repo_type} version...\")\n",
         "    pre_download(desc, overwrite)\n",
         "\n",
-        "    for dir in [fused_dir, models_dir, vaes_dir, hypernetworks_dir, embeddings_dir, extensions_dir, lora_dir, control_dir, esrgan_dir]:\n",
+        "    for dir in [patches_dir, fused_dir, models_dir, vaes_dir, hypernetworks_dir, embeddings_dir, extensions_dir, lora_dir, control_dir, esrgan_dir]:\n",
         "        os.makedirs(dir, exist_ok=True)\n",
         "\n",
         "def reinstall_webui():\n",
@@ -250,14 +253,19 @@
         "        except Exception as e:\n",
         "            print(\"\u001b[1;32mAn error occurred when updating Web UI:\", e)\n",
         "\n",
-        "    if colab_optimizations:\n",
-        "        sdv2_patches = \"https://raw.githubusercontent.com/ddPn08/automatic1111-colab/main/patches/stablediffusion-lowram.patch\"\n",
+        "    if dpm_v2_patch:\n",
         "        with capture.capture_output() as cap:\n",
-        "            os.makedirs(patches_dir, exist_ok=True)\n",
+        "            !wget {dpm_v2_url} -P {patches_dir}  -c\n",
+        "            os.chdir(repo_dir)\n",
+        "            !git apply --whitespace=fix {patches_dir}/01-add-DPMPP-2M-V2.patch\n",
+        "\n",
+        "    if colab_optimizations:\n",
+        "        with capture.capture_output() as cap:\n",
         "            !wget  {sdv2_patches} -P {patches_dir}  -c\n",
         "            os.chdir(os.path.join(repo_dir, \"repositories/stable-diffusion-stability-ai\"))\n",
         "            !git apply {patches_dir}/stablediffusion-lowram.patch\n",
         "            del cap\n",
+        "\n",
         "        !sed -i \"s@os.path.splitext(checkpoint_.*@os.path.splitext(checkpoint_file); map_location='cuda'@\" {repo_dir}/modules/sd_models.py\n",
         "        !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' {repo_dir}/webui.py\n",
         "        !sed -i \"s@'cpu'@'cuda'@\" {repo_dir}/modules/extras.py\n",
@@ -978,6 +986,8 @@
         "default_prompt = \"masterpiece, best quality,\"\n",
         "default_neg_prompt = \"(worst quality, low quality:1.4)\"\n",
         "default_sampler = \"DPM++ 2M Karras\"\n",
+        "if dpm_v2_patch:\n",
+        "    default_sampler = \"DPM++ 2M Karras v2\" \n",
         "default_steps = 20\n",
         "default_width = 512\n",
         "default_height = 768\n",
