feat: added dpm solver++ alternative https://github.com/Linaqruf/sd-notebook-collection/issues/15

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -102,7 +102,7 @@
         "update_webui = True  # @param {type:'boolean'}\n",
         "update_extensions = True  # @param {type:'boolean'}\n",
         "commit_hash = \"\"  # @param {type:'string'}\n",
-        "dpm_v2_patch = True  # @param {type:'boolean'}\n",
+        "dpm_v2_patch = False  # @param {type:'boolean'}\n",
         "# @markdown > It's not recommended to set this `True` if you have **Colab Pro** subscription.\n",
         "colab_optimizations = False  # @param {type:'boolean'}\n",
         "\n",
