fix: default window height set to "500"

--- a/Infinite_Image_Browsing_Demo.ipynb
+++ b/Infinite_Image_Browsing_Demo.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOoy8QwiwP8VSXKOaGeal2F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,7 +112,7 @@
         "user_agent = \"gdl/1.24.5\"\n",
         "#@markdown You can limit the number of images to download by using the `--range` option followed by the desired range. For example `1-200`.\n",
         "range = \"1-200\" #@param {type: \"string\"}\n",
-        "write_tags = False #@param {type: \"boolean\"}\n",
+        "write_tags = True #@param {type: \"boolean\"}\n",
         "additional_arguments = \"--filename /O --no-part\"\n",
         "\n",
         "tags = prompt.split(',')\n",
@@ -241,11 +240,9 @@
         "    thread = Thread(target=run_app)\n",
         "    thread.start()\n",
         "\n",
-        "    serve_kernel_port_as_iframe(7860, width='100%', height='800', cache_in_notebook=False)\n",
+        "    serve_kernel_port_as_iframe(7860, width='100%', height='500', cache_in_notebook=False)\n",
         "\n",
-        "main()\n",
-        "\n",
-        "\n"
+        "main()"
       ],
       "metadata": {
         "cellView": "form",
