--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -873,7 +873,7 @@
         "                    if is_extensions:\n",
         "                        os.chdir(extensions_dir)\n",
         "                        if os.path.exists(basename):\n",
-        "                            !shutil.rmtreee(os.path.join(extensions_dir, basename))\n",
+        "                            shutil.rmtree(os.path.join(extensions_dir, basename))\n",
         "                        !git clone {url}\n",
         "                    elif url.startswith(\"/content/drive/MyDrive/\"):\n",
         "                        Path(os.path.join(dst_dir, basename)).write_bytes(Path(url).read_bytes())\n",
